<resources>
    <string name="app_name">Cloud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">歌曲名</string>
    <string name="singer_name">歌手名</string>
    <string name="album_name">专辑名</string>
    <string name="start_time">00:00</string>
    <string name="end_time">04:21</string>
</resources>